tests/codegen/errors/reader/collections-refinements/atom.reader.error.reader.array.infinite.disallowed/reader-array-infinite-disallowed.mon
;; TEST-ID: tests.codegen.reader-error.reader-array-infinite-disallowed
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/collections-refinements
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Can't do infinite arrays. Are you trying to blow up the stack?
;; TEST-ATOM: atom.reader.error.reader.array.infinite.disallowed
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.array.infinite.disallowed
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Can't do infinite arrays. Are you trying to blow up the stack?
;; TEST-READER-PATH: reader.c:6263 parser.array
;; TEST-CODEGEN-PATH: diagnostic.parser.array
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:6263 Can't do infinite arrays. Are you trying to blow up the stack?
;; TEST-USES-ATOM: atom.reader.error.reader.array.infinite.disallowed
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.array
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/collections-refinements/atom.reader.error.reader.array.infinite.disallowed
;; TEST-MENU-PATH: codegen/errors/reader/collections-refinements/atom.reader.error.reader.array.infinite.disallowed
;; TEST-ATOM-LEAF: atom.reader.error.reader.array.infinite.disallowed
;; TEST-CLI-TARGET: codegen errors reader collections-refinements

(module Main)
(show [1..])
